--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clear": "rm -fr ./dist",
     "build": "tsc",
-    "build:dev":"tsc --watch"
+    "build:dev": "tsc --watch"
   },
   "author": "taojiang",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "jest": "^27.0.6",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "linkedlist": "^1.0.1"
   }
 }
